--- a/registration/registration-client/src/main/resources/labels_my.properties
+++ b/registration/registration-client/src/main/resources/labels_my.properties
@@ -1,5 +1,5 @@
 #Demographic Details *******START********
-#
+#Demographic Details 
 search_for_Pre_registration_id=ကြိုတင်မှတ်ပုံတင်ခြင်း ID
 fetch=အချက်အလက်များ ရယူရန်
 search=ရှာရန်
