added keyboard in burmese

--- a/registration/registration-client/src/main/resources/labels_en.properties
+++ b/registration/registration-client/src/main/resources/labels_en.properties
@@ -606,3 +606,7 @@ Users=Users
 accept_word=Accept
 slash= / 
 reject_word=Reject
+
+update.title=Update Title 
+update.description=Description 
+update.time=Monday 10 Jan 8:00 AM
