--- a/registration/registration-client/src/main/resources/labels_fr.properties
+++ b/registration/registration-client/src/main/resources/labels_fr.properties
@@ -607,3 +607,7 @@ Users=Utilisateurs
 accept_word=Accepter
 slash= / 
 reject_word=Rejeter
+
+update.title=Update Title 
+update.description=Description 
+update.time=Monday 10 Jan 8:00 AM
