--- a/registration/registration-client/src/main/resources/labels_my.properties
+++ b/registration/registration-client/src/main/resources/labels_my.properties
@@ -44,7 +44,7 @@ parentOrGuardianUIN=မိဘ/အုပ်ထိန်းသူ RID/UIN
 titleDemographicPane=လူဦးရေဆိုင်ရာအသေးစိတ်အချက်အလက်များ
 #Demographic screen language title
 #language=မြန်မာohewoh\u0639\u0631\u0628\u0649\u1019\u103C\u1014\u103A\u1019\u102Cहिन्दी
-language=မြန်မာ ि
+language=မြန်မာ ०
 
 #
 # Demographic Details *******END*******
@@ -609,3 +609,19 @@ accept_word=လက်ခံရန်
 slash= /
 reject_word=ပယ်ချရန်
 
+update.title=ခေါင်းစဉ်အသစ်ပြောင်းရန် ०
+update.description=ဖော်ပြချက်
+update.time=တနင်္လာနေ့၊ ဇန်နဝါရီလ ၁၀ ရက် နံနက် ၈:၀၀
+
+
+update.title.2=Update Title 2
+update.description.2=Description 2
+update.time.2=Monday 10 Jan 8:00 AM
+
+update.title.3=Update Title 3
+update.description.3=Description 3
+update.time.3=Monday 10 Jan 8:00 AM
+
+update.title.4=Update Title 4
+update.description.4=Description 4
+update.time.4=Monday 10 Jan 8:00 AM
