--- a/registration/registration-client/src/main/resources/labels_ar.properties
+++ b/registration/registration-client/src/main/resources/labels_ar.properties
@@ -442,3 +442,6 @@ Users=\u0627\u0644\u0645\u0633\u062A\u062E\u062F\u0645\u0648\u0646
 accept_word=\u0642\u0628\u0648\u0644
 slash= / 
 reject_word=\u0631\u0641\u0636
+update.title=Update Title 
+update.description=Description 
+update.time=Monday 10 Jan 8:00 AM
